--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 <div class="lastest-news mb-20 p-20 bg-w red-6 txt-c-sm d-flex  ">
                     <h2 class="mt-0 pt-15 mb-20">Latest Uploads</h2>
                     <div class=" latest_uploads d-flex align-center ">
-                        <img   src="Image/avi.svg "class="icon-section8">
+                        <img src="Image/avi.svg " class="icon-section8">
                         <div class="body">
                             <div class="info">
                                 <h3>Created SASS Section </h3>
@@ -331,7 +331,7 @@
                         </div>
                     </div>
                     <div class=" latest_uploads d-flex align-center ">
-                        <img   src="Image/txt.svg "class="icon-section8">
+                        <img src="Image/txt.svg " class="icon-section8">
                         <div class="body">
                             <div class="info">
                                 <h3>Created SASS Section </h3>
@@ -342,7 +342,7 @@
                         </div>
                     </div>
                     <div class=" latest_uploads d-flex align-center ">
-                        <img   src="Image/zip.svg "class="icon-section8">
+                        <img src="Image/zip.svg " class="icon-section8">
                         <div class="body">
                             <div class="info">
                                 <h3>Created SASS Section </h3>
@@ -353,7 +353,7 @@
                         </div>
                     </div>
                     <div class=" latest_uploads d-flex align-center ">
-                        <img   src="Image/psd.svg "class="icon-section8">
+                        <img src="Image/psd.svg " class="icon-section8">
                         <div class="body">
                             <div class="info">
                                 <h3>Created SASS Section </h3>
@@ -364,7 +364,7 @@
                         </div>
                     </div>
                     <div class=" latest_uploads d-flex align-center ">
-                        <img   src="Image/pdf.svg "class="icon-section8">
+                        <img src="Image/pdf.svg " class="icon-section8">
                         <div class="body">
                             <div class="info">
                                 <h3>Created SASS Section </h3>
@@ -375,7 +375,7 @@
                         </div>
                     </div>
                     <div class=" latest_uploads d-flex align-center ">
-                        <img   src="Image/sql.svg "class="icon-section8">
+                        <img src="Image/sql.svg " class="icon-section8">
                         <div class="body">
                             <div class="info">
                                 <h3>Created SASS Section </h3>
@@ -385,11 +385,11 @@
 
                         </div>
                     </div>
- 
+
                 </div>
                 <div class="last-project mb-20 p-20 bg-w red-6 txt-c-sm d-flex p-relative   ">
                     <h2 class="mt-0 pt-15 mb-20">Last Project Process</h2>
-                    <ul class="list-none m-0 p-relative"> 
+                    <ul class="list-none m-0 p-relative">
                         <li class=" d-flex align-center done">Got the Project</li>
                         <li class="mt-25 mr-25  d-flex align-center done">Started The Project</li>
                         <li class="mt-25 d-flex align-center done">The Project About To Finish</li>
@@ -397,12 +397,11 @@
                         <li class="mt-25 d-flex align-center current">Test the project</li>
                         <li class="mt-25 d-flex align-center ">finsh the project & Get Money</li>
                         <li class="mt-25 d-flex align-center ">finsh the project & Get Money</li>
-                        
-
-                    </ul>
-                    <img  class="launch-icon opacity-3 sm-hide" src="Image/project.png" alt="">
-                </div>
 
+                        
+                    </ul>
+                    <img class="launch-icon opacity-3 sm-hide" src="Image/project.png" alt="">
+                </div>
                 <div class="reminder pb-25 mb-20 p-20 bg-w red-6  txt-c-sm  p-relative   ">
                     <h2 class="mt-0  pt-15 mb-20">Reminders </h2>
                     <ul class="list-none p-0 m-0 pb-20">
@@ -423,7 +422,7 @@
                         <li class="d-flex mt-20 align-center mt-15">
                             <span class="key bg-green mr-15 d-block red-circle"></span>
                             <div class="pl-15 green">
-                                <p class="fs-14 fw-bold mt-0 mb-5">Call All my Client  </p>
+                                <p class="fs-14 fw-bold mt-0 mb-5">Call All my Client </p>
                                 <span class="fs-13 c-gray">05/11/2022 - 12:00am</span>
                             </div>
                         </li>
@@ -435,9 +434,8 @@
                             </div>
                         </li>
                     </ul>
-            
-                </div>
 
+                </div>
                 <div class="lasted-post   mb-20 p-20 bg-w red-6  txt-c-sm  p-relative ">
                     <h2 class="mt-0  pt-15 mb-20">Latest post </h2>
                     <div class="top d-flex    flex-column">
@@ -449,7 +447,8 @@
                             </div>
                         </div>
                         <div class="post-content sm-text-center  pt-15 pb-15 mt-20 mb-20 ">
-                            <p>You Can Fool All Of The People Some Of The Time, And Some OfThe People All Of The Time, But You Can't Fool All Of The People All Of The Time.</p>
+                            <p>You Can Fool All Of The People Some Of The Time, And Some OfThe People All Of The Time,
+                                But You Can't Fool All Of The People All Of The Time.</p>
                         </div>
 
                         <div class="post-stats d-flex flex-between c-gray">
@@ -464,7 +463,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="lasted-social   mb-20 p-20 bg-w red-6  txt-c-sm  p-relative ">
                     <h2 class="mt-0  pt-10  mb-20">Social Media Stats </h2>
                     <div class="content d-flex  ">
@@ -473,32 +471,178 @@
                             <span class="c-blue">90K Followers</span>
                             <div class="btn bg-twitter">Follow</div>
                         </div>
-                    </div> 
+                    </div>
                     <div class="content d-flex mt-10   ">
-                        <i class="icon  fa fa-facebook bg-blue  " ></i>
+                        <i class="icon  fa fa-facebook bg-blue  "></i>
                         <div class="info bg-facebook-O-3 d-flex flex-between align-center w-100  ">
                             <span class="c-blue">2M Like</span>
                             <div class="btn bg-blue">Like</div>
                         </div>
-                    </div> 
+                    </div>
                     <div class="content d-flex mt-10  ">
-                        <i class="icon  fa fa-youtube bg-r " ></i>
+                        <i class="icon  fa fa-youtube bg-r "></i>
                         <div class="info bg-youtube-O-3  d-flex flex-between align-center w-100  ">
                             <span class="c-r">3M Subs</span>
                             <div class="btn bg-r">Subscribe</div>
                         </div>
-                    </div> 
+                    </div>
                     <div class="content d-flex mt-10  ">
-                        <i class="icon  fa fa-linkedin bg-linkedin " ></i>
+                        <i class="icon  fa fa-linkedin bg-linkedin "></i>
                         <div class="info bg-linkedin-O-3 d-flex flex-between align-center w-100  ">
                             <span class="c-linkedin">3M Subs</span>
                             <div class="btn bg-linkedin">Connect</div>
                         </div>
-                    </div> 
+                    </div>
                 </div>
             </div>
- 
+            <div class="projects p-20 bg-w red-10 m-20">
+                <h2 class="m-0 mb-20 pt-20 ">Project List</h2>
+                <div class="responsive-table">
+                    <table class="fs-15 w-full">
+                        <thead> 
+                            <tr>
+                                <td>Name</td>
+                                <td>Finish Date</td>
+                                <td>Client</td>
+                                <td>Price</td>
+                                <td>Team</td>
+                                <td>Status</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Ministry Wikipedia </td>
+                                <td>10 May 2022</td>
+                                <td>Ministry </td>
+                                <td>$3000 </td>
+                                <td>
+                                    <img src="Image/team-01.png" alt="" srcset="">
+                                    <img src="Image/team-02.png" alt="" srcset="">
+                                    <img src="Image/team-03.png" alt="" srcset="">
+                                    <img src="Image/team-04.png" alt="" srcset="">
+                                </td>
+                                <td>
+                                    <span class="label bg-orange c-w btn pointer">Pending</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>My Shop </td>
+                                <td>10 Oct 2021</td>
+                                <td>H&S </td>
+                                <td>$5000 </td>
+                                <td>
+                                    <img src="Image/team-02.png" alt="" srcset="">   
+                                    <img src="Image/team-04.png" alt="" srcset="">
+
+                                </td>
+                                <td>
+                                    <span class="label bg-blue c-w btn pointer">In Progress</span>
+                                </td>
+
+                            </tr>
+                            <tr>
+                                <td>Portfolio </td>
+                                <td>15 Agu 2022</td>
+                                <td>Void</td>
+                                <td>$1000</td>
+                                <td>
+                                    <img src="Image/team-02.png" alt="" srcset="">
+                                    <img src="Image/team-01.png" alt="" srcset="">
+                                    <img src="Image/team-03.png" alt="" srcset="">
+                                </td>
+                                <td>
+                                    <span class="label bg-green btn  c-w">Complete</span>
+                                </td>
+
+                            </tr>
+                            <tr>
+                                <td>Shazly Store</td>
+                                <td>9 sep 2022</td>
+                                <td>H-Dev </td>
+                                <td>$1500</td>
+                                <td>
+                                    <img src="Image/team-01.png" alt="" srcset="">
+                                    <img src="Image/team-02.png" alt="" srcset="">
+                                    <img src="Image/team-03.png" alt="" srcset="">
+                                    <img src="Image/team-04.png" alt="" srcset="">
+                                </td>
+                                <td>
+                                    <span class="label  btn bg-red c-w">Rejected</span>
+                                </td>
+
+                            </tr>
+                            <tr>
+                                <td>Bouba App</td>
+                                <td>10 Mar 2022</td>
+                                <td>Ministry </td>
+                                <td>$1200</td>
+                                <td>
+                                    <img src="Image/team-01.png" alt="" srcset="">
+                                    <img src="Image/team-02.png" alt="" srcset="">
+                                    <img src="Image/team-03.png" alt="" srcset="">
+                                    <img src="Image/team-04.png" alt="" srcset="">
+                                </td>
+                                <td>
+                                    <span class="label  btn bg-red c-w">Rejected</span>
+                                </td>
+
+                            </tr>
+                            <tr>
+                                <td>Ministry Wikipedia </td>
+                                <td>19 mar 2022</td>
+                                <td>Arena Company </td>
+                                <td>$9000</td>
+                                <td>
+                                    <img src="Image/team-01.png" alt="" srcset="">
+                                    <img src="Image/team-02.png" alt="" srcset="">
+                                    <img src="Image/team-03.png" alt="" srcset="">
+                                    <img src="Image/team-04.png" alt="" srcset="">
+                                    <img src="Image/team-01.png" alt="" srcset="">
+                                    <img src="Image/team-02.png" alt="" srcset="">
+                                    <img src="Image/team-03.png" alt="" srcset="">
+                                    <img src="Image/team-04.png" alt="" srcset="">
+                                </td>
+                                <td>
+                                    <span class="label  btn bg-green c-w">Complete</span>
+                                </td>
+
+                            </tr>
+                            <tr>
+                                <td>Arena Application </td>
+                                <td>01 May 2021</td>
+                                <td>Ministry </td>
+                                <td>$6000</td>
+                                <td>
+                                    <img src="Image/team-01.png" alt="" srcset="">
+                                    <img src="Image/team-02.png" alt="" srcset="">
+                                    <img src="Image/team-03.png" alt="" srcset="">
+                                    <img src="Image/team-04.png" alt="" srcset="">
+                                </td>
+                                <td>
+                                    <span class="label  btn bg-green c-w">Complete</span>
+                                </td>
+
+                            </tr>
+                            <tr>
+                                <td>Glods Gym</td>
+                                <td>10 May 2022</td>
+                                <td>ShazlyDiv </td>
+                                <td>$3000 </td>
+                                <td>
+                                    <img src="Image/team-01.png" alt="" srcset="">
+                                    <img src="Image/team-04.png" alt="" srcset="">
+                                </td>
+                                <td>
+                                    <span class="label bg-orange c-w btn pointer">Pending</span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+            </div>
         </div>
 
 </body>
+
 </html>
