--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/824a87a2e1.js" crossorigin="anonymous"></script>
 
-</head>
 
 <body>
     <div class="page d-flex">
@@ -29,7 +28,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="index.html">
+                    <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="settings.html">
                         <i class="fa fa-gear"></i>
                         <!-- <i class="fa-solid fa-thumbs-up fa-5x"></i> -->
 
@@ -82,7 +81,7 @@
                 </div>
                 <div class="icons d-flex align-center">
                     <span class="notification p-relative">
-                        <i class="fa fa-bell"></i>
+                        <i class="fa-regular fa-bell fa-lg"></i>
                     </span>
                     <img src="Image/avatar.png" alt="">
                 </div>
