--- a/settings.html
+++ b/settings.html
@@ -37,7 +37,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class=" d-flex align-center fs-14 red-6 p-10 c-black" href="index.html">
+                    <a class=" d-flex align-center fs-14 red-6 p-10 c-black" href="Profile.html">
                         <i class="fa-regular fa-user"></i> <span>Profile</span>
                     </a>
                 </li>
