--- a/Profile.html
+++ b/Profile.html
@@ -88,7 +88,7 @@
       </div>
       <h1 class="p-relative">Profile</h1>
       <div class="profile-page m-20 mt-25 d-grid gap-20">
-        <div class="overview bg-w red-10 d-flex align-center">
+        <div class=" overview bg-w  red-10 d-flex align-center">
           <div class="avatar_box">
             <img class="mb-10 red-circle" src="Image/avatar.png" alt="" />
             <h3 class="m-0 mb-10">Ahmed Elshazly</h3>
@@ -123,11 +123,10 @@
                 <div class="fs-14">
                   <span class="c-gray">Country:</span>
                   <span>Egypt</span>
-                </div>
-                <br />
+                </div> 
                 <div class="fs-14">
                   <label>
-                    <input type="checkbox" class="toggle-checkbox" checked />
+                    <input type="checkbox" class="toggle-checkbox"  />
                     <div class="toggle-switch">
                       <i class="fa-solid fa-xmark"></i>
                       <i class="fa-solid fa-check"></i>
@@ -156,7 +155,7 @@
 
                 <div class="fs-14">
                   <label>
-                    <input type="checkbox" class="toggle-checkbox" checked />
+                    <input type="checkbox" class="toggle-checkbox"  />
                     <div class="toggle-switch">
                       <i class="fa-solid fa-xmark"></i>
                       <i class="fa-solid fa-check"></i>
@@ -225,6 +224,8 @@
             </div>
           </div>
         </div>
+
+
         <div class="other__date d-flex gap-20">
           <div class="skills-card  bg-w p-20 red-7">
             <h2 class="mt-0 mb-10">My Skills</h2>
