--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="index.html">
+                    <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="project.html">
                         <i class="fa fa-diagram-project"></i>
                         <span>Projects</span>
                     </a>
