--- a/settings.html
+++ b/settings.html
@@ -23,30 +23,28 @@
             <h3 class="p-relative txt-c">Admin</h3>
             <ul class="list-none p-0">
                 <li>
-                    <a class=" d-flex align-center fs-14 red-6 p-10 c-black" href="index.html">
-                        <i class="fa fa-chart-line fa-fw"></i>
-                        <span>Dashboard</span>
-                    </a>
-                </li>
-                <li>
-                    <a class="active d-flex align-center fs-14 red-6 p-10 c-black" href="settings.html">
-                        <i class="fa fa-gear"></i>
-                        <!-- <i class="fa-solid fa-thumbs-up fa-5x"></i> -->
-
-                        <span>Setting</span>
-                    </a>
-                </li>
-                <li>
-                    <a class=" d-flex align-center fs-14 red-6 p-10 c-black" href="Profile.html">
-                        <i class="fa-regular fa-user"></i> <span>Profile</span>
-                    </a>
-                </li>
-                <li>
                     <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="index.html">
-                        <i class="fa fa-diagram-project"></i>
-                        <span>Projects</span>
+                      <i class="fa fa-chart-line fa-fw"></i>
+                      <span>Dashboard</span>
                     </a>
-                </li>
+                  </li>
+                  <li>
+                    <a class="active d-flex align-center fs-14 red-6 p-10 c-black" href="settings.html">
+                      <i class="fa fa-gear"></i> 
+                      <span>Setting</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a class=" d-flex align-center fs-14 red-6 p-10 c-black" href="Profile.html">
+                      <i class="fa-regular fa-user"></i> <span>Profile</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="project.html">
+                      <i class="fa fa-diagram-project"></i>
+                      <span>Projects</span>
+                    </a>
+                  </li>
                 <li>
                     <a class=" d-flex align-center fs-14 red-6 p-10 c-black" href="index.html">
                         <i class="fa-solid fa-address-book"></i>
