--- a/project.html
+++ b/project.html
@@ -1,95 +1,396 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/master.css" />
+    <link rel="stylesheet" href="css/framework.css" />
+    <link rel="icon" href="Image/dashboard.png" />
+    <title>Dashbord</title>
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/824a87a2e1.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/master.css" />
-  <link rel="stylesheet" href="css/framework.css" />
-  <link rel="icon" href="Image/dashboard.png" />
-  <title>Dashbord</title>
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap" rel="stylesheet" />
-  <script src="https://kit.fontawesome.com/824a87a2e1.js" crossorigin="anonymous"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&display=swap" rel="stylesheet" />
-</head>
+  <body>
+    <div class="page d-flex">
+      <div class="slider bg-w p-relative">
+        <h3 class="p-relative txt-c">Admin</h3>
+        <ul class="list-none p-0">
+          <li>
+            <a
+              class="d-flex align-center fs-14 red-6 p-10 c-black"
+              href="index.html"
+            >
+              <i class="fa fa-chart-line fa-fw"></i>
+              <span>Dashboard</span>
+            </a>
+          </li>
+          <li>
+            <a
+              class="d-flex align-center fs-14 red-6 p-10 c-black"
+              href="settings.html"
+            >
+              <i class="fa fa-gear"></i>
+              <!-- <i class="fa-solid fa-thumbs-up fa-5x"></i> -->
 
-<body>
-  <div class="page d-flex">
-    <div class="slider bg-w p-relative">
-      <h3 class="p-relative txt-c">Admin</h3>
-      <ul class="list-none p-0">
-        <li>
-          <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="index.html">
-            <i class="fa fa-chart-line fa-fw"></i>
-            <span>Dashboard</span>
-          </a>
-        </li>
-        <li>
-          <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="settings.html">
-            <i class="fa fa-gear"></i>
-            <!-- <i class="fa-solid fa-thumbs-up fa-5x"></i> -->
-
-            <span>Setting</span>
-          </a>
-        </li>
-        <li>
-          <a class=" d-flex align-center fs-14 red-6 p-10 c-black" href="Profile.html">
-            <i class="fa-regular fa-user"></i> <span>Profile</span>
-          </a>
-        </li>
-        <li>
-          <a class="active d-flex align-center fs-14 red-6 p-10 c-black" href="project.html">
-            <i class="fa fa-diagram-project"></i>
-            <span>Projects</span>
-          </a>
-        </li>
-        <li>
-          <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="index.html">
-            <i class="fa-solid fa-address-book"></i>
-            <span>Courses</span>
-          </a>
-        </li>
-        <li>
-          <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="index.html">
-            <i class="fa-solid fa-user-group"></i>
-            <span>Friends</span>
-          </a>
-        </li>
-        <li>
-          <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="index.html">
-            <i class="fa-regular fa-file"></i>
-            <span>Files</span>
-          </a>
-        </li>
-        <li>
-          <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="index.html">
-            <i class="fa fa-holly-berry"></i>
-            <span>Plans</span>
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="content w-full">
-      <div class="head bg-w p-15 flex-between">
-        <div class="search p-relative">
-          <!-- <i class="icon fa fa-search" aria-hidden="true"></i> -->
-          <input style="padding: 10px" type="text" placeholder="Type a keyword" />
+              <span>Setting</span>
+            </a>
+          </li>
+          <li>
+            <a
+              class="d-flex align-center fs-14 red-6 p-10 c-black"
+              href="Profile.html"
+            >
+              <i class="fa-regular fa-user"></i> <span>Profile</span>
+            </a>
+          </li>
+          <li>
+            <a
+              class="active d-flex align-center fs-14 red-6 p-10 c-black"
+              href="project.html"
+            >
+              <i class="fa fa-diagram-project"></i>
+              <span>Projects</span>
+            </a>
+          </li>
+          <li>
+            <a
+              class="d-flex align-center fs-14 red-6 p-10 c-black"
+              href="index.html"
+            >
+              <i class="fa-solid fa-address-book"></i>
+              <span>Courses</span>
+            </a>
+          </li>
+          <li>
+            <a
+              class="d-flex align-center fs-14 red-6 p-10 c-black"
+              href="index.html"
+            >
+              <i class="fa-solid fa-user-group"></i>
+              <span>Friends</span>
+            </a>
+          </li>
+          <li>
+            <a
+              class="d-flex align-center fs-14 red-6 p-10 c-black"
+              href="index.html"
+            >
+              <i class="fa-regular fa-file"></i>
+              <span>Files</span>
+            </a>
+          </li>
+          <li>
+            <a
+              class="d-flex align-center fs-14 red-6 p-10 c-black"
+              href="index.html"
+            >
+              <i class="fa fa-holly-berry"></i>
+              <span>Plans</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="content w-full">
+        <div class="head bg-w p-15 flex-between">
+          <div class="search p-relative">
+            <!-- <i class="icon fa fa-search" aria-hidden="true"></i> -->
+            <input
+              style="padding: 10px"
+              type="text"
+              placeholder="Type a keyword"
+            />
+          </div>
+          <div class="icons d-flex align-center">
+            <span class="notification p-relative">
+              <i class="fa-regular fa-bell fa-lg"></i>
+            </span>
+            <img src="Image/avatar.png" alt="" />
+          </div>
         </div>
-        <div class="icons d-flex align-center">
-          <span class="notification p-relative">
-            <i class="fa-regular fa-bell fa-lg"></i>
-          </span>
-          <img src="Image/avatar.png" alt="" />
+        <h1 class="p-relative">Projects</h1>
+        <div class="project__page d-grid m-20 gap-20">
+          <div class="project bg-w p-20 red-6 p-relative">
+            <div class="header">
+              <span class="date fs-13 c-gray">15/10/2022</span>
+              <h3 class="m-0">Admin Dashbord</h3>
+            </div>
+            <p class="c-gray fs-14">
+              Elzero Dashboard Project Design And Programming And Hosting
+            </p>
+            <div class="team">
+              <a href=""><img src="Image/team-01.png" /></a>
+              <a href=""><img src="Image/team-02.png" /></a>
+              <a href=""><img src="Image/team-03.png" /></a>
+              <a href=""><img src="Image/team-04.png" /></a>
+              <a href=""><img src="Image/team-05.png" /></a>
+            </div>
+            <div class="skills d-flex">
+              <div class="fs-13 red-6 bg-eee">Programming</div>
+              <div class="fs-13 red-6 bg-eee">Design</div>
+              <div class="fs-13 red-6 bg-eee">Hosing</div>
+              <div class="fs-13 red-6 bg-eee">Marketing</div>
+            </div>
+            <div class="info flex-between">
+              <div class="prog bg-eee">
+                <span class="bg-red" style="width: 50%"></span>
+              </div>
+              <div class="fs-14 c-gray">
+                <i class="fa fa-dollar-sign" aria-hidden="true"></i>
+                2500
+              </div>
+            </div>
+          </div>
+
+          <div class="project bg-w p-20 red-6 p-relative">
+            <div class="header">
+              <span class="date fs-13 c-gray">10/10/2022</span>
+              <h3 class="m-0">E-Commerce</h3>
+            </div>
+            <p class="c-gray fs-14">
+              Academy Portal Project Design And Programming
+            </p>
+            <div class="team">
+              <a href=""><img src="Image/team-03.png" /></a>
+              <a href=""><img src="Image/team-04.png" /></a>
+              <a href=""><img src="Image/team-05.png" /></a>
+            </div>
+            <div class="skills d-flex">
+              <div class="fs-13 red-6 bg-eee">Programming</div>
+              <div class="fs-13 red-6 bg-eee">Design</div>
+            </div>
+            <div class="info flex-between">
+              <div class="prog bg-eee">
+                <span class="bg-green" style="width: 50%"></span>
+              </div>
+              <div class="fs-14 c-gray">
+                <i class="fa fa-dollar-sign" aria-hidden="true"></i>
+                5900
+              </div>
+            </div>
+          </div>
+
+          <div class="project bg-w p-20 red-6 p-relative">
+            <div class="header">
+              <span class="date fs-13 c-gray">10/10/2022</span>
+              <h3 class="m-0">E-Commerce</h3>
+            </div>
+            <p class="c-gray fs-14">
+              Academy Portal Project Design And Programming
+            </p>
+            <div class="team">
+              <a href=""><img src="Image/team-03.png" /></a>
+              <a href=""><img src="Image/team-04.png" /></a>
+              <a href=""><img src="Image/team-05.png" /></a>
+            </div>
+            <div class="skills d-flex">
+              <div class="fs-13 red-6 bg-eee">Programming</div>
+              <div class="fs-13 red-6 bg-eee">Design</div>
+            </div>
+            <div class="info flex-between">
+              <div class="prog bg-eee">
+                <span class="bg-green" style="width: 50%"></span>
+              </div>
+              <div class="fs-14 c-gray">
+                <i class="fa fa-dollar-sign" aria-hidden="true"></i>
+                5900
+              </div>
+            </div>
+          </div>
+
+          <div class="project bg-w p-20 red-6 p-relative">
+            <div class="header">
+              <span class="date fs-13 c-gray">15/10/2022</span>
+              <h3 class="m-0">Shazly Dashboard</h3>
+            </div>
+            <p class="c-gray fs-14">
+              Shazly Dashboard Project Design And Programming And Hosting
+            </p>
+            <div class="team">
+              <a href=""><img src="Image/team-01.png" /></a>
+              <a href=""><img src="Image/team-02.png" /></a>
+              <a href=""><img src="Image/team-03.png" /></a>
+              <a href=""><img src="Image/team-04.png" /></a> 
+            </div>
+            <div class="skills d-flex">
+              <div class="fs-13 red-6 bg-eee">Programming</div>
+              <div class="fs-13 red-6 bg-eee">Design</div> 
+              <div class="fs-13 red-6 bg-eee">Hosting</div> 
+              <div class="fs-13 red-6 bg-eee">Marketing</div>
+            </div>
+            <div class="info flex-between">
+              <div class="prog bg-eee">
+                <span class="bg-twitter-O-3" style="width: 50%"></span>
+              </div>
+              <div class="fs-14 c-gray">
+                <i class="fa fa-dollar-sign" aria-hidden="true"></i>
+                2500
+              </div>
+            </div>
+          </div>
+
+          <div class="project bg-w p-20 red-6 p-relative">
+            <div class="header">
+              <span class="date fs-13 c-gray">9/8/2022</span>
+              <h3 class="m-0">Headphones Shop</h3>
+            </div>
+            <p class="c-gray fs-14">
+              Application Project Design 
+            </p>
+            <div class="team">
+              <a href=""><img src="Image/team-01.png" /></a>
+              <a href=""><img src="Image/team-02.png" /></a>
+              <a href=""><img src="Image/team-03.png" /></a>
+              <a href=""><img src="Image/team-04.png" /></a> 
+            </div>
+            <div class="skills d-flex">
+              <div class="fs-13 red-6 bg-eee">Programming</div> 
+              <div class="fs-13 red-6 bg-eee">Hosting</div> 
+              <div class="fs-13 red-6 bg-eee">Marketing</div>
+            </div>
+            <div class="info flex-between">
+              <div class="prog bg-eee">
+                <span class="bg-yellow" style="width: 70%"></span>
+              </div>
+              <div class="fs-14 c-gray">
+                <i class="fa fa-dollar-sign" aria-hidden="true"></i>
+                5500
+              </div>
+            </div>
+          </div>
+
+          <div class="project bg-w p-20 red-6 p-relative">
+            <div class="header">
+              <span class="date fs-13 c-gray">30/9/2022</span>
+              <h3 class="m-0">Professional Portfolio From Scratch </h3>
+            </div>
+            <p class="c-gray fs-14">
+              Portfolio Design And Programming And Hosting
+            </p>
+            <div class="team">
+              <a href=""><img src="Image/team-01.png" /></a> 
+              <a href=""><img src="Image/team-03.png" /></a> 
+              <a href=""><img src="Image/team-05.png" /></a>
+            </div>
+            <div class="skills d-flex">
+              <div class="fs-13 red-6 bg-eee">Programming</div>
+              <div class="fs-13 red-6 bg-eee">Design</div>
+              <div class="fs-13 red-6 bg-eee">Hosing</div>
+              <div class="fs-13 red-6 bg-eee">Marketing</div>
+            </div>
+            <div class="info flex-between">
+              <div class="prog bg-eee">
+                <span class="bg-linkedin" style="width: 65%"></span>
+              </div>
+              <div class="fs-14 c-gray">
+                <i class="fa fa-dollar-sign" aria-hidden="true"></i>
+                5000
+              </div>
+            </div>
+          </div>
+
+          <div class="project bg-w p-20 red-6 p-relative">
+            <div class="header">
+              <span class="date fs-13 c-gray">30/7/2022</span>
+              <h3 class="m-0">Golds Gym  </h3>
+            </div>
+            <p class="c-gray fs-14">
+              Golds Gym  Design And Programming And Hosting
+            </p>
+            <div class="team">
+              <a href=""><img src="Image/team-01.png" /></a> 
+              <a href=""><img src="Image/team-03.png" /></a> 
+              <a href=""><img src="Image/team-04.png" /></a>
+            </div>
+            <div class="skills d-flex">
+              <div class="fs-13 red-6 bg-eee">Programming</div>
+              <div class="fs-13 red-6 bg-eee">Design</div>
+              <div class="fs-13 red-6 bg-eee">Hosing</div> 
+            </div>
+            <div class="info flex-between">
+              <div class="prog bg-eee">
+                <span class="bg-orange" style="width: 60%"></span>
+              </div>
+              <div class="fs-14 c-gray">
+                <i class="fa fa-dollar-sign" aria-hidden="true"></i>
+                12500
+              </div>
+            </div>
+          </div>
+
+          <div class="project bg-w p-20 red-6 p-relative">
+            <div class="header">
+              <span class="date fs-13 c-gray">2/7/2022</span>
+              <h3 class="m-0">Netflix  </h3>
+            </div>
+            <p class="c-gray fs-14">
+              Netflix Design And Programming And Hosting
+            </p>
+            <div class="team">
+              <a href=""><img src="Image/team-01.png" /></a> 
+              <a href=""><img src="Image/team-03.png" /></a> 
+              <a href=""><img src="Image/team-05.png" /></a>
+            </div>
+            <div class="skills d-flex">
+              <div class="fs-13 red-6 bg-eee">Programming</div>
+              <div class="fs-13 red-6 bg-eee">Design</div>
+              <div class="fs-13 red-6 bg-eee">Hosing</div> 
+            </div>
+            <div class="info flex-between">
+              <div class="prog bg-eee">
+                <span class="bg-red" style="width: 70%"></span>
+              </div>
+              <div class="fs-14 c-gray">
+                <i class="fa fa-dollar-sign" aria-hidden="true"></i>
+                11322
+              </div>
+            </div>
+          </div>
+
+          <div class="project bg-w p-20 red-6 p-relative">
+            <div class="header">
+              <span class="date fs-13 c-gray">2/7/2022</span>
+              <h3 class="m-0">Keep Note   </h3>
+            </div>
+            <p class="c-gray fs-14">
+              Keep Note   Design And Programming And Hosting
+            </p>
+            <div class="team">
+              <a href=""><img src="Image/team-04.png" /></a> 
+              <a href=""><img src="Image/team-02.png" /></a> 
+              <a href=""><img src="Image/team-05.png" /></a>
+            </div>
+            <div class="skills d-flex">
+              <div class="fs-13 red-6 bg-eee">Programming</div>
+              <div class="fs-13 red-6 bg-eee">Design</div>
+              <div class="fs-13 red-6 bg-eee">Hosing</div> 
+            </div>
+            <div class="info flex-between">
+              <div class="prog bg-eee">
+                <span class="bg-twitter" style="width: 80%"></span>
+              </div>
+              <div class="fs-14 c-gray">
+                <i class="fa fa-dollar-sign" aria-hidden="true"></i>
+                12322
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <h1 class="p-relative">Projects</h1>
- 
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
