--- a/Profile.html
+++ b/Profile.html
@@ -48,7 +48,7 @@
           </a>
         </li>
         <li>
-          <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="index.html">
+          <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="courses.html">
             <i class="fa-solid fa-address-book"></i>
             <span>Courses</span>
           </a>
