--- a/project.html
+++ b/project.html
@@ -70,7 +70,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 red-6 p-10 c-black"
-              href="index.html"
+              href="courses.html"
             >
               <i class="fa-solid fa-address-book"></i>
               <span>Courses</span>
