--- a/courses.html
+++ b/courses.html
@@ -60,7 +60,7 @@
           </li>
           <li>
             <a
-              class=" d-flex align-center fs-14 red-6 p-10 c-black"
+              class="d-flex align-center fs-14 red-6 p-10 c-black"
               href="project.html"
             >
               <i class="fa fa-diagram-project"></i>
@@ -123,7 +123,349 @@
           </div>
         </div>
         <h1 class="p-relative">Courses</h1>
-      
+        <div class="courses__page d-grid m-20 gap-20">
+          <div class="course bg-w red-6 p-relative">
+            <img  class="cover" src="Image/course-01.jpg" />
+            <img  class="instructor" src="Image/team-01.png " />
+            <div class="header">
+              <h4 class="m-0">Mastering Web Design</h4>
+              <p class="description mt-15 fs-14  c-gray">Master The Art Of Web Designing And Mocking, Prototyping And Creating Web Design Architecture</p>
+            </div> 
+            <div class="info p-15 p-relative flex-between">
+              <span class="title bg-blue c-w red-6 p-5 btn">Course Info</span>
+
+            </div>
+            <div class=" content flex-between ">
+              <span class="c-gray">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                950
+              </span> 
+              <span class="c-gray">
+                <i class="fas fa-dollar-sign    "></i>
+                950
+              </span>
+            </div>
+          </div> 
+
+          <div class="course bg-w red-6 p-relative">
+            <img  class="cover" src="Image/course-02.jpg" />
+            <img  class="instructor" src="Image/team-02.png " />
+            <div class="header">
+              <h4 class="m-0">Data Structure And Algorithms</h4>
+              <p class="description mt-15 fs-14  c-gray">Master The Art Of Data Strcuture And Famous Algorithms Like Sorting, Dividing And Conquering</p>
+            </div> 
+            <div class="info p-15 p-relative flex-between">
+              <span class="title bg-blue c-w red-6 p-5 btn">Course Info</span>
+
+            </div>
+            <div class=" content flex-between ">
+              <span class="c-gray">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                950
+              </span> 
+              <span class="c-gray">
+                <i class="fas fa-dollar-sign    "></i>
+                950
+              </span>
+            </div>
+          </div> 
+
+          <div class="course bg-w red-6 p-relative">
+            <img  class="cover" src="Image/course-03.jpg" />
+            <img  class="instructor" src="Image/team-03.png " />
+            <div class="header">
+              <h4 class="m-0">Responsive Web Design </h4>
+              <p class="description mt-15 fs-14  c-gray">Mastering Responsive Web Design And Media Queries And Know Everything About Breakpoints</p>
+            </div> 
+            <div class="info p-15 p-relative flex-between">
+              <span class="title bg-blue c-w red-6 p-5 btn">Course Info</span>
+
+            </div>
+            <div class=" content flex-between ">
+              <span class="c-gray">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                950
+              </span> 
+              <span class="c-gray">
+                <i class="fas fa-dollar-sign    "></i>
+                950
+              </span>
+            </div>
+          </div> 
+          <div class="course bg-w red-6 p-relative">
+            <img  class="cover" src="Image/course-04.jpg" />
+            <img  class="instructor" src="Image/team-04.png " />
+            <div class="header">
+              <h4 class="m-0">Mastering Python</h4>
+              <p class="description mt-15 fs-14  c-gray">Mastering Python To Prepare For Data Science And AI And Automating Things in Your Life</p>
+            </div> 
+            <div class="info p-15 p-relative flex-between">
+              <span class="title bg-blue c-w red-6 p-5 btn">Course Info</span>
+
+            </div>
+            <div class=" content flex-between ">
+              <span class="c-gray">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                950
+              </span> 
+              <span class="c-gray">
+                <i class="fas fa-dollar-sign    "></i>
+                950
+              </span>
+            </div>
+          </div> 
+
+          <div class="course bg-w red-6 p-relative">
+            <img  class="cover" src="Image/course-05.jpg" />
+            <img  class="instructor" src="Image/team-01.png " />
+            <div class="header">
+              <h4 class="m-0">Mastering JavaScript</h4>
+              <p class="description mt-15 fs-14  c-gray">Mastering JavaScript To Prepare For Data Science And AI And Automating Things in Your Life</p>
+            </div> 
+            <div class="info p-15 p-relative flex-between">
+              <span class="title bg-blue c-w red-6 p-5 btn">Course Info</span>
+            </div>
+            <div class=" content flex-between ">
+              <span class="c-gray">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                950
+              </span> 
+              <span class="c-gray">
+                <i class="fas fa-dollar-sign    "></i>
+                950
+              </span>
+            </div>
+          </div> 
+
+          <div class="course bg-w red-6 p-relative">
+            <img  class="cover" src="Image/course-01.jpg" />
+            <img  class="instructor" src="Image/team-01.png " />
+            <div class="header">
+              <h4 class="m-0">Mastering Web Design</h4>
+              <p class="description mt-15 fs-14  c-gray">Master The Art Of Web Designing And Mocking, Prototyping And Creating Web Design Architecture</p>
+            </div> 
+            <div class="info p-15 p-relative flex-between">
+              <span class="title bg-blue c-w red-6 p-5 btn">Course Info</span>
+
+            </div>
+            <div class=" content flex-between ">
+              <span class="c-gray">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                950
+              </span> 
+              <span class="c-gray">
+                <i class="fas fa-dollar-sign    "></i>
+                950
+              </span>
+            </div>
+          </div> 
+
+          <div class="course bg-w red-6 p-relative">
+            <img  class="cover" src="Image/course-02.jpg" />
+            <img  class="instructor" src="Image/team-02.png " />
+            <div class="header">
+              <h4 class="m-0">Data Structure And Algorithms</h4>
+              <p class="description mt-15 fs-14  c-gray">Master The Art Of Data Strcuture And Famous Algorithms Like Sorting, Dividing And Conquering</p>
+            </div> 
+            <div class="info p-15 p-relative flex-between">
+              <span class="title bg-blue c-w red-6 p-5 btn">Course Info</span>
+
+            </div>
+            <div class=" content flex-between ">
+              <span class="c-gray">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                950
+              </span> 
+              <span class="c-gray">
+                <i class="fas fa-dollar-sign    "></i>
+                950
+              </span>
+            </div>
+          </div> 
+
+          <div class="course bg-w red-6 p-relative">
+            <img  class="cover" src="Image/course-03.jpg" />
+            <img  class="instructor" src="Image/team-03.png " />
+            <div class="header">
+              <h4 class="m-0">Responsive Web Design </h4>
+              <p class="description mt-15 fs-14  c-gray">Mastering Responsive Web Design And Media Queries And Know Everything About Breakpoints</p>
+            </div> 
+            <div class="info p-15 p-relative flex-between">
+              <span class="title bg-blue c-w red-6 p-5 btn">Course Info</span>
+
+            </div>
+            <div class=" content flex-between ">
+              <span class="c-gray">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                950
+              </span> 
+              <span class="c-gray">
+                <i class="fas fa-dollar-sign    "></i>
+                950
+              </span>
+            </div>
+          </div> 
+          <div class="course bg-w red-6 p-relative">
+            <img  class="cover" src="Image/course-04.jpg" />
+            <img  class="instructor" src="Image/team-04.png " />
+            <div class="header">
+              <h4 class="m-0">Mastering Python</h4>
+              <p class="description mt-15 fs-14  c-gray">Mastering Python To Prepare For Data Science And AI And Automating Things in Your Life</p>
+            </div> 
+            <div class="info p-15 p-relative flex-between">
+              <span class="title bg-blue c-w red-6 p-5 btn">Course Info</span>
+
+            </div>
+            <div class=" content flex-between ">
+              <span class="c-gray">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                950
+              </span> 
+              <span class="c-gray">
+                <i class="fas fa-dollar-sign    "></i>
+                950
+              </span>
+            </div>
+          </div> 
+
+          <div class="course bg-w red-6 p-relative">
+            <img  class="cover" src="Image/course-05.jpg" />
+            <img  class="instructor" src="Image/team-01.png " />
+            <div class="header">
+              <h4 class="m-0">Mastering JavaScript</h4>
+              <p class="description mt-15 fs-14  c-gray">Mastering JavaScript To Prepare For Data Science And AI And Automating Things in Your Life</p>
+            </div> 
+            <div class="info p-15 p-relative flex-between">
+              <span class="title bg-blue c-w red-6 p-5 btn">Course Info</span>
+            </div>
+            <div class=" content flex-between ">
+              <span class="c-gray">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                950
+              </span> 
+              <span class="c-gray">
+                <i class="fas fa-dollar-sign    "></i>
+                950
+              </span>
+            </div>
+          </div> 
+
+          <div class="course bg-w red-6 p-relative">
+            <img  class="cover" src="Image/course-01.jpg" />
+            <img  class="instructor" src="Image/team-01.png " />
+            <div class="header">
+              <h4 class="m-0">Mastering Web Design</h4>
+              <p class="description mt-15 fs-14  c-gray">Master The Art Of Web Designing And Mocking, Prototyping And Creating Web Design Architecture</p>
+            </div> 
+            <div class="info p-15 p-relative flex-between">
+              <span class="title bg-blue c-w red-6 p-5 btn">Course Info</span>
+
+            </div>
+            <div class=" content flex-between ">
+              <span class="c-gray">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                950
+              </span> 
+              <span class="c-gray">
+                <i class="fas fa-dollar-sign    "></i>
+                950
+              </span>
+            </div>
+          </div> 
+
+          <div class="course bg-w red-6 p-relative">
+            <img  class="cover" src="Image/course-02.jpg" />
+            <img  class="instructor" src="Image/team-02.png " />
+            <div class="header">
+              <h4 class="m-0">Data Structure And Algorithms</h4>
+              <p class="description mt-15 fs-14  c-gray">Master The Art Of Data Strcuture And Famous Algorithms Like Sorting, Dividing And Conquering</p>
+            </div> 
+            <div class="info p-15 p-relative flex-between">
+              <span class="title bg-blue c-w red-6 p-5 btn">Course Info</span>
+
+            </div>
+            <div class=" content flex-between ">
+              <span class="c-gray">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                950
+              </span> 
+              <span class="c-gray">
+                <i class="fas fa-dollar-sign    "></i>
+                950
+              </span>
+            </div>
+          </div> 
+
+          <div class="course bg-w red-6 p-relative">
+            <img  class="cover" src="Image/course-03.jpg" />
+            <img  class="instructor" src="Image/team-03.png " />
+            <div class="header">
+              <h4 class="m-0">Responsive Web Design </h4>
+              <p class="description mt-15 fs-14  c-gray">Mastering Responsive Web Design And Media Queries And Know Everything About Breakpoints</p>
+            </div> 
+            <div class="info p-15 p-relative flex-between">
+              <span class="title bg-blue c-w red-6 p-5 btn">Course Info</span>
+
+            </div>
+            <div class=" content flex-between ">
+              <span class="c-gray">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                950
+              </span> 
+              <span class="c-gray">
+                <i class="fas fa-dollar-sign    "></i>
+                950
+              </span>
+            </div>
+          </div> 
+          <div class="course bg-w red-6 p-relative">
+            <img  class="cover" src="Image/course-04.jpg" />
+            <img  class="instructor" src="Image/team-04.png " />
+            <div class="header">
+              <h4 class="m-0">Mastering Python</h4>
+              <p class="description mt-15 fs-14  c-gray">Mastering Python To Prepare For Data Science And AI And Automating Things in Your Life</p>
+            </div> 
+            <div class="info p-15 p-relative flex-between">
+              <span class="title bg-blue c-w red-6 p-5 btn">Course Info</span>
+
+            </div>
+            <div class=" content flex-between ">
+              <span class="c-gray">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                950
+              </span> 
+              <span class="c-gray">
+                <i class="fas fa-dollar-sign    "></i>
+                950
+              </span>
+            </div>
+          </div> 
+
+          <div class="course bg-w red-6 p-relative">
+            <img  class="cover" src="Image/course-05.jpg" />
+            <img  class="instructor" src="Image/team-01.png " />
+            <div class="header">
+              <h4 class="m-0">Mastering JavaScript</h4>
+              <p class="description mt-15 fs-14  c-gray">Mastering JavaScript To Prepare For Data Science And AI And Automating Things in Your Life</p>
+            </div> 
+            <div class="info p-15 p-relative flex-between">
+              <span class="title bg-blue c-w red-6 p-5 btn">Course Info</span>
+            </div>
+            <div class=" content flex-between ">
+              <span class="c-gray">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                950
+              </span> 
+              <span class="c-gray">
+                <i class="fas fa-dollar-sign    "></i>
+                950
+              </span>
+            </div>
+          </div> 
+
+           
+
+        </div>
       </div>
     </div>
   </body>
